--- a/tools/perf/tests/Build
+++ b/tools/perf/tests/Build
@@ -35,10 +35,13 @@ perf-y += thread-map.o
 perf-y += llvm.o llvm-src.o
 perf-y += bpf.o
 
-$(OUTPUT)tests/llvm-src.c: tests/bpf-script-example.c
+$(OUTPUT)tests/llvm-src.c: tests/bpf-script-example.c tests/bpf-script-example-with-arg.c
 	$(call rule_mkdir)
 	$(Q)echo '#include <tests/llvm.h>' > $@
 	$(Q)echo 'const char test_llvm__bpf_prog[] =' >> $@
+	$(Q)sed -e 's/"/\\"/g' -e 's/\(.*\)/"\1\\n"/g' $< >> $@
+	$(Q)echo ';' >> $@
+	$(Q)echo 'const char test_llvm__bpf_prog_with_arg[] =' >> $@
 	$(Q)sed -e 's/"/\\"/g' -e 's/\(.*\)/"\1\\n"/g' $< >> $@
 	$(Q)echo ';' >> $@
 
